k8s/apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cloudradar
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: cloudradar
spec:
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
